[project]
name = "vasp-opt-follows"
dynamic = ["version"]
description = "Follows different criterion of an optimization done with VASP"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}

authors = [
  {name = "Pierre Beaujean", email = "pierre.beaujean@unamur.be" }
]

maintainers = [
  {name = "Pierre Beaujean", email = "pierre.beaujean@unamur.be" }
]

classifiers = [
    # For a list of valid classifiers, see https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "numpy",
    "matplotlib",
    "h5py",
    "pycairo",
    "PyGObject"
]

[project.optional-dependencies]
dev = [
    "flake8",
    "flake8-quotes",
    "autopep8",
    "pytest",
    "PyGObject-stubs"
]

[project.urls]
"Homepage" = "https://github.com/pierre-24/vasp-opt-follows"
"Bug Reports" = "https://github.com/pierre-24/vasp-opt-follows/issues"
"Source" = "https://github.com/pierre-24/vasp-opt-follows/"

[project.scripts]
'vasp-opt-follows' = 'vasp_opt_follows.main:main'

[tool.setuptools]
packages = ['vasp_opt_follows']

[tool.setuptools.dynamic]
version = {attr = "vasp_opt_follows.__version__"}

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]